--- a/main.html
+++ b/main.html
@@ -6,9 +6,9 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/shoelace-css/1.0.0-beta16/shoelace.css">
-    <link rel="icon" type="image/png" href="../images/favicon-16x16.png" />
+    <link rel="icon" type="image/png" href="./images/favicon-16x16.png" />
 
-    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="./styles.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <title>VISION - Test your vision</title>
 
@@ -80,7 +80,7 @@
         </h3>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="../js/script.js"></script>
+    <script src="./script.js"></script>
 </body>
 
 </html>
